--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,11 +1,10 @@
-@import './reset.scss';
-@import './variables/global.scss';
-@import './themes/dark.scss';
-@import './themes/light.scss';
+@import "./reset";
+@import "./variables/global";
+@import "./themes/dark";
+@import "./themes/light";
 
 .app {
   font: var(--font-m);
-  
   background-color: var(--bg-color);
   color: var(--primary-color);
   min-height: 100vh;
