add jest, config and first unit test

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,6 +1,6 @@
 .Navbar {
   width: 100%;
-  height: var(--navbar-height);
+  height: var(--Navbar-height);
   background-color: var(--inverted-bg-color);
   display: flex;
   align-items: center;
