--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -2,12 +2,8 @@
   height: calc(100vh - var(--navbar-height));
   width: var(--sidebar-width);
   background-color: var(--inverted-bg-color);
+  transition: 0.2s;
   position: relative;
-  transition: 0.3s;
-}
-
-.collapsed {
-  width: var(--sidebar-width-collapsed);
 }
 
 .switchers {
@@ -17,4 +13,41 @@
   gap: 20px;
   justify-content: center;
   width: 100%;
+}
+
+.collapsedBtn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translateX(100%);
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+
+  .switchers {
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .link {
+    opacity: 0;
+    width: 0;
+    transition: all 0.2s;
+    height: 0;
+  }
 }
