--- a/src/shared/UI/AppLink/AppLink.module.scss
+++ b/src/shared/UI/AppLink/AppLink.module.scss
@@ -5,12 +5,15 @@
 
 .primary {
   color: var(--primary-color);
+  fill: var(--primary-color);
 }
 
 .secondary {
   color: var(--inverted-primary-color);
+  fill: var(--inverted-primary-color);
 }
 
 .red {
   color: red;
+  fill: red;
 }
