--- a/src/shared/UI/Modal/Modal.module.scss
+++ b/src/shared/UI/Modal/Modal.module.scss
@@ -4,7 +4,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: var(--modal-z-index);
+  z-index: -1;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .overlay {
@@ -20,4 +22,17 @@
   padding: 20px;
   border-radius: 12px;
   background-color: var(--bg-color);
+  transform: scale(0.5);
+  max-width: 60%;
+  transition: transform 0.3s;
+}
+
+.opened {
+  z-index: var(--modal-z-index);
+  opacity: 1;
+  pointer-events: auto;
+
+  .content {
+    transform: scale(1);
+  }
 }
