--- a/src/shared/UI/Modal/Modal.module.scss
+++ b/src/shared/UI/Modal/Modal.module.scss
@@ -22,6 +22,7 @@
   padding: 20px;
   border-radius: 12px;
   background-color: var(--bg-color);
+  color: var(--primary-color);
   transform: scale(0.5);
   max-width: 60%;
   transition: transform 0.3s;
