--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -1,1 +1,11 @@
-.LoginForm{}
+.LoginForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 400px;
+}
+
+.loginBtn {
+  margin-left: auto;
+  margin-top: 5px;
+}
