--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,4 +10,6 @@
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
   --modal-z-index: 10;
+  --color-red-light: red;
+  --color-red-dark: rgb(200 1 1);
 }
